# filament-rs

./: .gitignore  Cargo.toml  README.md  build.rs  build_materials.sh  wrapper.hpp
cpp/src/: engine.cc  engine.h  entity_manager.cc  entity_manager.h  index_buffer.cc  index_buffer.h  lib.cc  material.cc  material.h  opaque_types.h  renderable_manager.cc  renderable_manager.h  renderer.cc  renderer.h  scene.cc  scene.h  transform_manager.cc  vertex_buffer.cc  vertex_buffer.h  view.cc  view.h  wrapper.h
examples/: init_and_shutdown.rs
examples/materials/: README.md
examples/materials/src/: color_unlit.mat  voxel_lit.mat
examples/quad/: main.rs  window_helpers.rs
examples/triangle/: main.rs  window_helpers.rs
examples/triangle_low_level/: main.rs
filament_high_level/: Cargo.toml
filament_high_level/examples/: triangle.rs
filament_high_level/src/: asset_helpers.rs  engine.rs  input_system.rs  lib.rs  mesh.rs  prelude.rs  rendering_system.rs
filament_high_level/src/components/: camera.rs  material.rs  material_bytes_load_request.rs  material_instantiate_request.rs  material_template.rs  material_template_bytes_load_request.rs  mesh.rs  mesh_bytes_load_request.rs  mod.rs  render_mesh.rs  texture.rs  texture_bytes_load_request.rs
filament_low_level/: Cargo.toml
filament_low_level/cpp/src/: camera.cc  camera.h  engine.cc  engine.h  index_buffer.h  material.cc  renderable_manager.cc  renderable_manager.h  scene.cc  scene.h  texture.cc  texture.h  transform_manager.h  vertex_buffer.cc  vertex_buffer.h  view.cc  view.h
filament_low_level/examples/: init_and_shutdown.rs
filament_low_level/examples/materials/: build.sh
filament_low_level/examples/triangle/: main.rs
filament_low_level/examples/triangle_low_level/: main.rs  window_helpers.rs
filament_low_level/src/: engine.rs  entity_manager.rs  index_buffer.rs  lib.rs  material.rs  misc_types.rs  prelude.rs  renderer.rs  texture.rs  texture_sampler.rs  vertex_buffer.rs
materials/: README.md
materials/src/: voxel_lit.mat
src/: camera.rs  engine.rs  entity_manager.rs  index_buffer.rs  lib.rs  material.rs  mesh.rs  misc_types.rs  prelude.rs  raw_bindings.rs  renderable_manager.rs  renderer.rs  scene.rs  texture.rs  texture_sampler.rs  vertex_buffer.rs  view.rs
src/high_level/: input_handler.rs  mesh.rs  mod.rs  prelude.rs  rendering_system.rs  window_system.rs
src/high_level/components/: material_template.rs  mesh_bytes_load_request.rs  mod.rs
src/low_level/: camera.rs  engine.rs  entity_manager.rs  index_buffer.rs  material.rs  misc_types.rs  mod.rs  prelude.rs  raw_bindings.rs  renderable_manager.rs  renderer.rs  scene.rs  texture.rs  texture_sampler.rs  vertex_buffer.rs  view.rs
