[package]
name = "filament"
version = "0.1.0"
authors = ["Alec Thilenius <alec@thilenius.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
nalgebra = "0.18"
legion = { optional = true, git = "https://github.com/jaynus/legion.git", branch = "systems" }
legion_transform = { optional = true, git = "https://github.com/AThilenius/legion_transform.git" }
shrev = { optional = true, version = "1.1" }
winit = { optional = true, version = "0.19" }

[dev-dependencies]
winit = "0.19"

[build-dependencies]
bindgen = "0.51"
cc = "1.0"
curl = "0.4"
flate2 = "1.0"
tar = "0.4"

[features]
default = ["high-level"]
high-level = ["legion", "legion_transform", "shrev", "winit"]
