# TODO: Switch to workspaces
[package]
name = "filament"
version = "0.1.0"
authors = ["Alec Thilenius <alec@thilenius.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
lazy_static = { optional = true, version = "1.4" }
legion = { optional = true, git = "https://github.com/jaynus/legion.git", branch = "systems" }
legion_transform = { optional = true, git = "https://github.com/AThilenius/legion_transform.git" }
nalgebra = "0.18"
shrev = { optional = true, version = "1.1" }
shrinkwraprs = { optional = true, version = "0.2" }
smallvec = { optional = true, version = "1.0" }
winit = { optional = true, version = "0.19" }

[dev-dependencies]
winit = "0.19"

[build-dependencies]
bindgen = "0.51"
cc = "1.0"
curl = "0.4"
flate2 = "1.0"
tar = "0.4"

[features]
default = ["high-level"]
high-level = [
  "legion",
  "legion_transform",
  "shrev",
  "shrinkwraprs",
  "smallvec",
  "winit"
]
